test_scores/negative_dimers/features/Q70E73.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q70E73.pkl.xz